syntax = "proto3";

package enginepb;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";

import "engine/proto/error.proto";
import "engine/proto/metastore.proto";
import "engine/proto/resources.proto";

option go_package = "github.com/pingcap/tiflow/engine/enginepb";

service Discovery {
    rpc RegisterExecutor(RegisterExecutorRequest) returns(RegisterExecutorResponse) {}

    rpc Heartbeat(HeartbeatRequest) returns(HeartbeatResponse) {}

    /* Metastore manager API */
    // RegisterMetaStore is called from backend metastore and
    // registers to server master metastore manager
    rpc RegisterMetaStore(RegisterMetaStoreRequest) returns(RegisterMetaStoreResponse) {}

    // QueryMetaStore queries metastore manager and returns
    // the information of a matching metastore
    rpc QueryMetaStore(QueryMetaStoreRequest) returns(QueryMetaStoreResponse) {}

    rpc GetLeader(GetLeaderRequest) returns(GetLeaderResponse) {
        option (google.api.http) = {
            get: "/api/v1/leader"
        };
    }

    rpc ResignLeader(ResignLeaderRequest) returns(google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/api/v1/leader/resign"
        };
    }
}

service TaskScheduler {
    rpc ScheduleTask(ScheduleTaskRequest) returns(ScheduleTaskResponse) {}

    // ReportExecutorWorkload is called from executor to server master to report
    // resource usage in executor.
    rpc ReportExecutorWorkload(ExecWorkloadRequest) returns(ExecWorkloadResponse) {}
}

service JobManager {
    rpc CreateJob(CreateJobRequest) returns (Job){
        option (google.api.http) = {
            post: "/api/v1/jobs"
            body: "job"
        };
    };

    rpc GetJob(GetJobRequest) returns (Job){
        option (google.api.http) = {
            get: "/api/v1/jobs/{id=*}"
        };
    };

    rpc ListJobs(ListJobsRequest) returns (ListJobsResponse){
        option (google.api.http) = {
            get: "/api/v1/jobs"
        };
    };

    rpc CancelJob(CancelJobRequest) returns (Job){
        option (google.api.http) = {
            post: "/api/v1/jobs/{id=*}/cancel"
        };
    };

    rpc DeleteJob(DeleteJobRequest) returns (google.protobuf.Empty){
        option (google.api.http) = {
            delete: "/api/v1/jobs/{id=*}"
        };
    }
}

message HeartbeatRequest {
    string executor_id = 1;
    int32 resource_usage = 2;
    int32 status = 3;

    uint64 timestamp = 4;
    uint64 ttl = 5;
}

message HeartbeatResponse {
    Error err = 1;
    string leader = 2;
    repeated string addrs = 3;
}

message RegisterExecutorRequest {
    // dm need 'worker-name' to locate the worker.
    // TODO: Do we really need a "worker name"? Can we use address to identify an executor?
    string address = 1;
    string version = 2;
    int64  capability = 3;
}

message RegisterExecutorResponse {
    Error err = 1;
    string  executor_id = 2;
}

message ScheduleTaskRequest {
    string task_id = 1;
    int64 cost = 2;
    repeated ResourceKey resource_requirements = 3;
}

message ScheduleTaskResponse {
    string executor_id = 1;
    string executor_addr = 2;
}

message ExecWorkload {
    int32 tp = 1;
    int32 usage = 2;
}

message ExecWorkloadRequest {
    string executor_id = 1;
    repeated ExecWorkload workloads = 2;
    repeated string resource_id = 3;
}

message ExecWorkloadResponse {
    Error err = 1;
}

message GetLeaderRequest {
}

message GetLeaderResponse {
    string advertise_addr = 1;
}

message ResignLeaderRequest {
}

message Job {
    enum Type {
        TypeUnknown = 0;
        CVSDemo = 1;
        DM = 2;
        CDC = 3;
        FakeJob = 4;
    }

    enum Status{
        StatusUnknown = 0;
        Created = 1;
        Running = 2;
        Failed = 3;
        Finished = 4;
        Canceling = 5;
        Canceled = 6;
    }

    string id = 1;
    Type type = 2;
    Status status = 3 [(google.api.field_behavior) = OUTPUT_ONLY];
    bytes config = 4;
    Error error = 5 [(google.api.field_behavior) = OUTPUT_ONLY];
}

message CreateJobRequest {
    Job job = 1;
    string tenant_id = 2;
    string project_id = 3;
}

message GetJobRequest {
    string id = 1;
    string tenant_id = 2;
    string project_id = 3;
}

message ListJobsRequest {
    // The maximum number of jobs to return.
    // If it is unspecified or less than 1, currently server will return all jobs.
    int32 page_size = 1;
    // The page token, returned by a previous call, to request the next page of results.
    string page_token = 2;
    string tenant_id = 3;
    string project_id = 4;
}

message ListJobsResponse {
    repeated Job jobs = 1;
    // A token to retrieve next page of results.
    string next_page_token = 2;
}

message CancelJobRequest {
    string id = 1;
    string tenant_id = 2;
    string project_id = 3;
}

message DeleteJobRequest {
    string id = 1;
    string tenant_id = 2;
    string project_id = 3;
}
